tests/NormalTests/paczka1/small_fuzzy/27005534.err
Error in line 1: vzg9G120s S575 53,8
Error in line 3: Spi A223 16,2
Error in line 2: vzg9G120s A223 13,5
Error in line 8: PPGk2Axg A223 71,1
Error in line 9: PPGk2Axg A345 99,7
